// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default ItemCollection 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      requiredElements={
        Object {
          "commentRequired": true,
          "displaysRequired": 8,
          "endAccessoryRequired": true,
          "startAccessoryRequired": true,
        }
      }
    >
      <Item
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        listItemStyles={Object {}}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          isTruncated={false}
          text="Display 1"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 2"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 3"
        />
      </Item>
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      requiredElements={
        Object {
          "commentRequired": true,
          "displaysRequired": 8,
          "endAccessoryRequired": true,
          "startAccessoryRequired": true,
        }
      }
    >
      <Item
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        listItemStyles={Object {}}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          isTruncated={false}
          text="Display 1"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 2"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 3"
        />
      </Item>
    </TableView>
  }
/>
`;

exports[`should render an ItemCollection with a breakpoint 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      requiredElements={
        Object {
          "commentRequired": true,
          "displaysRequired": 8,
          "endAccessoryRequired": true,
          "startAccessoryRequired": true,
        }
      }
    >
      <Item
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        listItemStyles={Object {}}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          isTruncated={false}
          text="Display 1"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 2"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 3"
        />
      </Item>
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      requiredElements={
        Object {
          "commentRequired": true,
          "displaysRequired": 8,
          "endAccessoryRequired": true,
          "startAccessoryRequired": true,
        }
      }
    >
      <Item
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        listItemStyles={Object {}}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          isTruncated={false}
          text="Display 1"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 2"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 3"
        />
      </Item>
    </TableView>
  }
/>
`;

exports[`should render an ItemCollection with list styles 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      listStyles={
        Object {
          "hasChevrons": true,
          "isDivided": true,
        }
      }
      requiredElements={
        Object {
          "commentRequired": true,
          "displaysRequired": 8,
          "endAccessoryRequired": true,
          "startAccessoryRequired": true,
        }
      }
    >
      <Item
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        listItemStyles={Object {}}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          isTruncated={false}
          text="Display 1"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 2"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 3"
        />
      </Item>
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      requiredElements={
        Object {
          "commentRequired": true,
          "displaysRequired": 8,
          "endAccessoryRequired": true,
          "startAccessoryRequired": true,
        }
      }
    >
      <Item
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        listItemStyles={Object {}}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          isTruncated={false}
          text="Display 1"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 2"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 3"
        />
      </Item>
    </TableView>
  }
/>
`;

exports[`should render an ItemCollection with requiredElements 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      requiredElements={
        Object {
          "commentRequired": true,
          "displaysRequired": 5,
          "endAccessoryRequired": false,
          "startAccessoryRequired": true,
        }
      }
    >
      <Item
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        listItemStyles={Object {}}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          isTruncated={false}
          text="Display 1"
        />
      </Item>
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      requiredElements={
        Object {
          "commentRequired": true,
          "displaysRequired": 5,
          "endAccessoryRequired": false,
          "startAccessoryRequired": true,
        }
      }
    >
      <Item
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        listItemStyles={Object {}}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          isTruncated={false}
          text="Display 1"
        />
      </Item>
    </TableView>
  }
/>
`;

exports[`should render an ItemCollection with table styles 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      requiredElements={
        Object {
          "commentRequired": true,
          "displaysRequired": 8,
          "endAccessoryRequired": true,
          "startAccessoryRequired": true,
        }
      }
    >
      <Item
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        listItemStyles={Object {}}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          isTruncated={false}
          text="Display 1"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 2"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 3"
        />
      </Item>
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      requiredElements={
        Object {
          "commentRequired": true,
          "displaysRequired": 8,
          "endAccessoryRequired": true,
          "startAccessoryRequired": true,
        }
      }
      tableStyles={
        Object {
          "isPadded": true,
          "isStriped": true,
        }
      }
    >
      <Item
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        listItemStyles={Object {}}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          isTruncated={false}
          text="Display 1"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 2"
        />
        <ItemDisplay
          isTruncated={false}
          text="Display 3"
        />
      </Item>
    </TableView>
  }
/>
`;
